--- a/vignettes/lang-reference.Rmd
+++ b/vignettes/lang-reference.Rmd
@@ -139,8 +139,10 @@ Evaluation, macro utilities, R interop helpers, and assertions.
 [`assert-error`](lang-core.html#assert-error),
 [`assert-no-error`](lang-core.html#assert-no-error),
 [`eval`](lang-core.html#eval), [`read`](lang-core.html#read),
-[`write`](lang-core.html#write), [`capture`](lang-core.html#capture),
-[`gensym`](lang-core.html#gensym), [`macro?`](lang-core.html#macro-p),
+[`write`](lang-core.html#write),
+[`import-stdlib`](lang-core.html#import-stdlib),
+[`capture`](lang-core.html#capture), [`gensym`](lang-core.html#gensym),
+[`macro?`](lang-core.html#macro-p),
 [`macroexpand`](lang-core.html#macroexpand),
 [`promise?`](lang-core.html#promise-p), [`force`](lang-core.html#force),
 [`promise-expr`](lang-core.html#promise-expr),
